--- a/src/main/webapp/bank.xhtml
+++ b/src/main/webapp/bank.xhtml
@@ -38,7 +38,11 @@
 			
 			<p:dataTable id="bankTable" value="#{bankBean.bankList}" var="bank"
 				selectionMode="single" selection="#{bankBean.bank}"
-				rowKey="#{bank.id}" lazy="false">
+				rowKey="#{bank.id}" lazy="false"
+				paginator="true" paginatorPosition="bottom" rows="10"
+				paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}"
+				currentPageReportTemplate="{startRecord}-{endRecord} de {totalRecords} registros">
+				
 				<p:ajax event="rowSelect" update="contentForm:toolbar"/>
 				<p:ajax event="rowUnselect" update="contentForm:toolbar"/>
 				
