--- a/src/main/webapp/bank.xhtml
+++ b/src/main/webapp/bank.xhtml
@@ -15,10 +15,12 @@
 			
 			<p:toolbar id="toolbar">
 				<f:facet name="left">
+					<p:inputText id="search" size="20" value="#{bankBean.searchTerm}"/>
+					
 					<p:commandButton value="Buscar" icon="pi pi-search"
 						actionListener="#{bankBean.findAll}" update="bankTable"
 						onstart="PF('bankTable').getPaginator().setPage(0)"
-						process="@this"/>
+						process="@this search"/>
 					<p:commandButton value="Criar" icon="pi pi-plus-circle"
 						actionListener="#{bankBean.initializeCreate}"
 						oncomplete="PF('bankDialog').show()" update="bankDialog"
