--- a/src/main/webapp/team.xhtml
+++ b/src/main/webapp/team.xhtml
@@ -18,8 +18,7 @@
 					<p:inputText id="search" size="20" value="#{teamBean.searchTerm}"/>
 					
 					<p:commandButton value="Buscar" icon="pi pi-search" 
-						actionListener="#{teamBean.findAll}" update="teamTable"
-						onstart="PF('teamTable').getPaginator().setPage(0)"
+						actionListener="#{teamBean.find}" update="teamTable"
 						process="@this search"/>
 					<p:commandButton value="Criar" icon="pi pi-plus"
 						actionListener="#{teamBean.initializeCreate}"
